--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,3 +1,6 @@
 {
-  "extends": "stylelint-config-standard"
+  "extends": "stylelint-config-sass-guidelines",
+  "rules": {
+    "selector-max-id": 2
+  }
 }
