--- a/package.json
+++ b/package.json
@@ -73,7 +73,9 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "stylelint": "^8.4.0",
-    "stylelint-config-standard": "^18.0.0",
+    "stylelint-config-sass-guidelines": "^4.1.0",
+    "stylelint-order": "^0.8.0",
+    "stylelint-scss": "^2.2.0",
     "url-loader": "^0.6.2"
   }
 }
