--- a/package.json
+++ b/package.json
@@ -1,17 +1,14 @@
 {
-  "name": "quiz-app",
+  "name": "elka-quiz",
   "version": "1.0.0",
-  "description": "Quiz app",
-  "main": "server/index.js",
+  "description": "Elka Quiz",
   "scripts": {
     "build": "NODE_ENV=production webpack -p --progress --config webpack.prod.config.js",
-    "dev": "webpack-dev-server --hot --watch --config webpack.dev.config.js",
-    "lint": "yarn lint:eslint && yarn lint:stylelint",
+    "start": "webpack-dev-server --hot --watch --config webpack.dev.config.js",
+    "lint": "npm run lint:eslint && npm run lint:stylelint",
     "lint:eslint": "./scripts/lint-eslint",
     "lint:stylelint": "./scripts/lint-stylelint",
     "lint:fix": "./scripts/lint-fix",
-    "prod": "yarn build && yarn start",
-    "start": "nodemon server/index.js",
     "test": "./scripts/test",
     "test:verbose": "./scripts/test-verbose"
   },
@@ -25,7 +22,6 @@
     "css-loader": "^0.28.7",
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
-    "lab-babel": "^1.1.1",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -69,7 +65,6 @@
     "nodemon": "^1.12.5",
     "postcss-loader": "^2.0.9",
     "prettier": "^1.9.2",
-    "react-test-renderer": "^16.2.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "stylelint": "^8.4.0",
