--- a/package.json
+++ b/package.json
@@ -8,69 +8,71 @@
     "lint": "npm run lint:eslint && npm run lint:stylelint",
     "lint:eslint": "./scripts/lint-eslint",
     "lint:stylelint": "./scripts/lint-stylelint",
-    "lint:fix": "./scripts/lint-fix",
-    "test": "./scripts/test",
-    "test:verbose": "./scripts/test-verbose"
+    "lint:fix": "./scripts/lint-fix"
   },
   "license": "MIT",
   "engines": {
     "node": ">=8.9.0"
   },
+  "browserslist": [
+    "last 2 versions"
+  ],
   "dependencies": {
-    "body-parser": "^1.18.2",
-    "classnames": "^2.2.5",
-    "css-loader": "^0.28.7",
-    "express": "^4.16.2",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "prop-types": "^15.6.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-redux": "^5.0.6",
-    "react-router-dom": "^4.2.2",
-    "redux": "^3.7.2",
-    "redux-batched-actions": "^0.1.6",
-    "redux-logger": "^2.10.2",
-    "redux-thunk": "^2.2.0",
-    "reselect": "^3.0.1",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "2.7.1"
+    "classnames": "^2.2.6",
+    "css-loader": "^3.2.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-redux": "^7.1.1",
+    "react-router-dom": "^5.0.1",
+    "redux": "^4.0.4",
+    "redux-batched-actions": "^0.4.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0"
   },
   "devDependencies": {
-    "autoprefixer": "^7.2.3",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.3",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "bulma": "0.6.1",
-    "css-hot-loader": "^1.3.4",
-    "eslint": "^4.12.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-import-resolver-webpack": "^0.8.3",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-prettier": "^2.3.1",
-    "eslint-plugin-react": "^7.5.1",
-    "file-loader": "^1.1.5",
-    "html-webpack-plugin": "^2.30.1",
-    "image-webpack-loader": "^3.4.2",
-    "less": "^2.7.3",
-    "less-loader": "^4.0.5",
-    "node-sass": "^4.7.2",
-    "nodemon": "^1.12.5",
-    "postcss-loader": "^2.0.9",
-    "prettier": "^1.9.2",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.0",
-    "stylelint": "^8.4.0",
-    "stylelint-config-sass-guidelines": "^4.1.0",
-    "stylelint-order": "^0.8.0",
-    "stylelint-scss": "^2.2.0",
-    "url-loader": "^0.6.2"
+    "@babel/core": "^7.6.0",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
+    "@babel/plugin-transform-object-assign": "^7.2.0",
+    "@babel/plugin-transform-react-jsx": "^7.3.0",
+    "@babel/preset-env": "^7.6.0",
+    "@babel/preset-react": "^7.0.0",
+    "autoprefixer": "^9.6.1",
+    "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.0.6",
+    "bulma": "^0.6.1",
+    "css-hot-loader": "^1.4.4",
+    "cssnano": "^4.1.10",
+    "eslint": "^6.4.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.3.0",
+    "eslint-import-resolver-webpack": "^0.11.1",
+    "eslint-loader": "^3.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.14.3",
+    "file-loader": "^4.2.0",
+    "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^6.0.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "node-sass": "^4.12.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "path": "^0.12.7",
+    "postcss-loader": "^3.0.0",
+    "prettier": "^1.18.2",
+    "react-hot-loader": "^4.12.13",
+    "sass-loader": "^8.0.0",
+    "stylelint": "^11.0.0",
+    "stylelint-config-sass-guidelines": "^6.1.0",
+    "stylelint-order": "^3.1.1",
+    "stylelint-scss": "^3.11.0",
+    "terser-webpack-plugin": "^2.1.0",
+    "url-loader": "^2.1.0",
+    "webpack": "^4.40.2",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.1"
   }
 }
