--- a/.eslintrc
+++ b/.eslintrc
@@ -38,7 +38,8 @@
         "singleQuote": true,
         "printWidth": 80
       }
-    ]
+    ],
+    "import/no-extraneous-dependencies": ["error", {"devDependencies": true}]
   },
   "settings": {
     "import/resolver": {
